--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "dompurify": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
