--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "cors": "^2.8.5",
     "dompurify": "^3.0.1",
+    "font-awesome": "^4.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
