--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1"
   },
   "jest": {
